<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Astrolabe</string>
    <string name="action_settings">Settings</string>
    <string name="action_info">Information</string>
    <string name="text_measure_angle">Angle:</string>
    <string name="button_measure_angle">Measure Angle</string>
    <string name="button_orientation_front">View Back</string>
    <string name="button_orientation_back">View Front</string>
    <string name="text_select_star">Select Celestial Star:</string>
    <string name="rotation_title">Rotation</string>
    <string name="rotation_rete">Rete</string>
    <string name="rotation_rule">Rule</string>

    <string-array name="stars_array">
        <item>The Sun</item>
        <item>Deneb (Top of Cygnus)</item>
        <item></item>
    </string-array>

    <string name="title_activity_angle_measurement">AngleMeasurement</string>
    <string name="angle_title">Angle:</string>
    
    <string name="title_activity_info">About</string>
    <string name="info_instruction_title">Instructions:</string>
    <string name="info_instruction_text">
        1. Identify a star (or the sun) in the sky.\n
        2. Use Measure feature to record the angle. You may do this by using the shadow your device to line up the angle.\n
        3. Either Manually or by using the Rotate feature, turn the rete so that today\'s date aligns on the altitude circle corresponding to the angle measured.\n
        4. Align a rule from the centre to the same date, and measure the time.
    </string>
    <string name="info_todo_title">Still Under Work:</string>
    <string name="info_todo_text">
        - Map Coordinates of Major stars onto Astrolabe Rete.\n
        - Automate Rotation of Astrolabe (promped).\n
        - Implement Rule to measure time.\n
        - Implement a zoom function, as plate + rete are quite small and hard to see. Also considering colour changes.
        - Implement back side of Astrolabe, which is crucial as it contains the date time.
    </string>
    <string name="info_developer_title">Developed By:</string>
    <string name="info_developer_text">Matthew Gebert\nmgeb1@student.monash.edu</string>
    
    
</resources>
