<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.astrolabe.Info" 
    android:orientation="vertical">
   	<TextView
   	    android:layout_width="fill_parent"
   	    android:layout_height="wrap_content"
   	    android:text="@string/info_instruction_title"
   	    android:textSize="22sp"
   	    android:textAlignment="gravity"
   	    android:gravity="center"
   	    />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_instruction_text"
        />
    <TextView
   	    android:layout_width="fill_parent"
   	    android:layout_height="wrap_content"
   	    android:paddingTop="10dp"
   	    android:text="@string/info_todo_title"
   	    android:textSize="22sp"
   	    android:textAlignment="gravity"
   	    android:gravity="center"
   	    />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_todo_text"
        />
    <TextView
   	    android:layout_width="fill_parent"
   	    android:layout_height="wrap_content"
   	    android:paddingTop="10dp"
   	    android:text="@string/info_developer_title"
   	    android:textSize="22sp"
   	    android:textAlignment="gravity"
   	    android:gravity="center"
   	    />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_developer_text"
        android:textAlignment="gravity"
        android:gravity="center"
        />

</LinearLayout>
