<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.astrolabe.MainMenu" >

    <item
        android:id="@+id/menuSwitchOrientation"
        android:title="@string/button_orientation_front"
        android:icon="@drawable/ic_action_import_export" 
        app:showAsAction="always"
        />
    
    <item
        android:id="@+id/info"
        android:title="@string/action_info"
        android:icon="@drawable/ic_action_about_white"
        app:showAsAction="always"
        />
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
</menu>
