<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.astrolabe.MainMenu" >

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/text_select_star" />

        <Spinner
            android:id="@+id/stars_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/text_measure_angle" />

        <TextView
            android:id="@+id/angle_display_main"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:hint="@string/button_measure_angle"
            android:onClick="measureAngle"/>
    </LinearLayout>

    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="5dp">
	    <com.example.astrolabe.customviews.AstrolabeView
	        android:id="@+id/astrolabe"
	        android:layout_gravity="center"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        />
    </LinearLayout>
    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:paddingTop="5dp"
	    android:paddingBottom="5dp"
	    android:gravity="bottom" >
	    <Button
	        android:id="@+id/orientationSwitch"
	        android:text="@string/button_orientation_front"
	        android:layout_height="wrap_content"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:onClick="setOrientation"
	        />
	    <LinearLayout 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        >
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/rotation_title"></TextView>
			<RadioGroup
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:id="@+id/rotationBtnGrp"> 
			    <RadioButton
			        android:id="@+id/rete_button"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:padding="0dp"
				    android:checked="true"
				    android:text="@string/rotation_rete"/>
			    <RadioButton
			        android:id="@+id/rule_button"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:padding="0dp"
				    android:text="@string/rotation_rule"/>
		    </RadioGroup>
	    </LinearLayout> 
	</LinearLayout>
    
</LinearLayout>